Saving Data and Code for PL Training

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -17,9 +17,14 @@
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "import pkbar"
+    "import pytorch_lightning as pl\n",
+    "from pytorch_lightning.loggers import TensorBoardLogger\n",
+    "\n",
+    "import os"
    ]
   },
   {
@@ -75,29 +80,51 @@
     "tokenizer = transformers.AutoTokenizer.from_pretrained('bert-base-cased')\n",
     "\n",
     "dataset = ToxicData(dataPath, tokenizer)\n",
-    "train_loader = DataLoader(dataset, batch_size = 64, shuffle = True, num_workers = 4, pin_memory = True)"
+    "train_loader = DataLoader(dataset, batch_size = 128, shuffle = True, num_workers = 4, pin_memory = True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15e7df2c-56b2-4325-946e-413cee9dba0b",
+   "id": "95eed52f-22f8-4fc0-b311-825b0c16b92e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Model(nn.Module):\n",
+    "class LitBert(pl.LightningModule):\n",
     "    def __init__(self):\n",
-    "        super(Model, self).__init__()\n",
+    "        super(LitBert, self).__init__()\n",
+    "        \n",
     "        self.bert = AutoModel.from_pretrained('bert-base-cased')\n",
     "        self.fc = nn.Linear(768, 1)\n",
     "        self.dropout = nn.Dropout(0.5)\n",
-    "    \n",
+    "            \n",
     "    def forward(self, x, attention_mask):\n",
     "        \n",
     "        x = self.bert(x, attention_mask, output_hidden_states=False)\n",
     "        x = self.dropout(x[1])\n",
     "        x = self.fc(x)\n",
-    "        return x"
+    "        return x\n",
+    "    \n",
+    "    def training_step(self, batch, batch_idx):\n",
+    "            \n",
+    "        less_toxic_tokens = batch['less_toxic_tokens']\n",
+    "        less_toxic_attn_mask = batch['less_toxic_attn_mask']\n",
+    "        more_toxic_tokens = batch['more_toxic_tokens']\n",
+    "        more_toxic_attn_mask = batch['more_toxic_attn_mask']\n",
+    "        targets = batch['targets']\n",
+    "\n",
+    "        less_toxic_score = model(less_toxic_tokens, less_toxic_attn_mask)\n",
+    "        more_toxic_score = model(more_toxic_tokens, more_toxic_attn_mask)\n",
+    "\n",
+    "        loss = F.margin_ranking_loss(more_toxic_score, less_toxic_score, targets, margin = 1.0)\n",
+    "        \n",
+    "        self.log(\"train_loss\", loss)\n",
+    "        \n",
+    "        return loss\n",
+    "    \n",
+    "    def configure_optimizers(self):\n",
+    "        optimizer = torch.optim.AdamW(self.parameters(), lr = 3e-5)\n",
+    "        return optimizer"
    ]
   },
   {
@@ -110,7 +137,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -120,41 +147,71 @@
     "%%capture\n",
     "# model = transformers.AutoModel.from_pretrained('bert-base-cased', cache_dir = './input/model/')\n",
     "# model = transformers.AutoModel.from_pretrained('bert-base-cased')\n",
-    "model = Model().to(device)"
+    "model = LitBert()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc666978-9b3b-4c52-927b-7c8944ae6422",
+   "id": "5ba4c72d-5888-4f4a-9876-6c46eb3a5f9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_step(batch):\n",
-    "\n",
-    "    optimizer.zero_grad(set_to_none=True)\n",
-    "    \n",
-    "    less_toxic_tokens = batch['less_toxic_tokens'].to(device)\n",
-    "    less_toxic_attn_mask = batch['less_toxic_attn_mask'].to(device)\n",
-    "    \n",
-    "    more_toxic_tokens = batch['more_toxic_tokens'].to(device)\n",
-    "    more_toxic_attn_mask = batch['more_toxic_attn_mask'].to(device)\n",
-    "    \n",
-    "    targets = batch['targets'].to(device)\n",
-    "\n",
-    "    less_toxic_score = model(less_toxic_tokens, less_toxic_attn_mask)\n",
-    "    more_toxic_score = model(more_toxic_tokens, more_toxic_attn_mask)\n",
-    "\n",
-    "    batch_loss = criterion(more_toxic_score, less_toxic_score, targets)\n",
-    "    batch_loss.backward()\n",
-    "    optimizer.step()\n",
-    "    \n",
-    "    return batch_loss.item()"
+    "num_epochs = 20"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "b84ce50c-2700-4231-a832-0b87a5a64e5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using 16bit native Automatic Mixed Precision (AMP)\n",
+      "GPU available: True, used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "  | Name    | Type      | Params\n",
+      "--------------------------------------\n",
+      "0 | bert    | BertModel | 108 M \n",
+      "1 | fc      | Linear    | 769   \n",
+      "2 | dropout | Dropout   | 0     \n",
+      "--------------------------------------\n",
+      "108 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "108 M     Total params\n",
+      "216.622   Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "542006ae5dad41f2a08d542b9a69c040",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "logger = TensorBoardLogger(save_dir = os.getcwd(), version=1, name='lightning_logs')\n",
+    "trainer = pl.Trainer(max_epochs=num_epochs, precision = 16, gpus = 1, deterministic = True, logger=logger)\n",
+    "trainer.fit(model, train_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "e9991d2d-b9cf-4fd3-aa22-b741ed765882",
    "metadata": {},
    "outputs": [],
@@ -185,84 +242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5ffb914f-f6c5-4d68-a591-f50b8b10ea33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "criterion = nn.MarginRankingLoss(margin = 1.0)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr = 3e-5)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "1348800b-3bf3-4d53-a2ac-aa0c875e1bc5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "num_epochs = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34d23d59-8f09-48ed-a2a8-8cd9f5f5426e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Epoch: 1/20\n",
-      "470/471 [========>.] - ETA: 0s - train_loss: 0.7239\n",
-      "\n",
-      "Epoch: 2/20\n",
-      "470/471 [========>.] - ETA: 0s - train_loss: 0.6166\n",
-      "\n",
-      "Epoch: 3/20\n",
-      "470/471 [========>.] - ETA: 0s - train_loss: 0.5597\n",
-      "\n",
-      "Epoch: 4/20\n",
-      "470/471 [========>.] - ETA: 0s - train_loss: 0.5265\n",
-      "\n",
-      "Epoch: 5/20\n",
-      "470/471 [========>.] - ETA: 0s - train_loss: 0.5013\n",
-      "\n",
-      "Epoch: 6/20\n",
-      "470/471 [========>.] - ETA: 0s - train_loss: 0.4866\n",
-      "\n",
-      "Epoch: 7/20\n",
-      "470/471 [========>.] - ETA: 0s - train_loss: 0.4776\n",
-      "\n",
-      "Epoch: 8/20\n",
-      "273/471 [====>.....] - ETA: 1:19 - train_loss: 0.4557"
-     ]
-    }
-   ],
-   "source": [
-    "train_per_epoch = len(train_loader)\n",
-    "\n",
-    "for epoch in range(num_epochs):\n",
-    "    \n",
-    "    print(\"\\n\")\n",
-    "    kbar = pkbar.Kbar(target = train_per_epoch, epoch=epoch, num_epochs=num_epochs, width = 10, always_stateful=False)\n",
-    "    \n",
-    "    for idx, batch in enumerate(train_loader):    \n",
-    "\n",
-    "        batch_loss = train_step(batch)\n",
-    "        \n",
-    "        ########################################################################\n",
-    "        kbar.update(idx, values= [(\"train_loss\", batch_loss)])\n",
-    "        ########################################################################\n",
-    "    \n",
-    "    ########################################################################\n",
-    "    # val_loss = val_step(dataloader)\n",
-    "    # kbar.add(1, values = [(\"val_loss\", val_loss)])\n",
-    "    ########################################################################"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
