Added Code for creating submission.csv file

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -24,7 +24,8 @@
     "import pytorch_lightning as pl\n",
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
     "\n",
-    "import os"
+    "import os\n",
+    "import gc"
    ]
   },
   {
@@ -95,7 +96,7 @@
     "        super(LitBert, self).__init__()\n",
     "        \n",
     "        self.bert = AutoModel.from_pretrained('bert-base-cased')\n",
-    "        self.fc = nn.Linear(768, 1)\n",
+    "        self.fc = nn.Linear(self.bert.config.hidden_size, 1)\n",
     "        self.dropout = nn.Dropout(0.5)\n",
     "            \n",
     "    def forward(self, x, attention_mask):\n",
@@ -129,23 +130,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b3598104-2abe-456c-ba63-d687eb74908d",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55d15c33f18e431780e249c7c45916e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/570 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb72ee1dd4cb40febe64af4efa3674cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/416M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertModel: ['cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
     }
    ],
    "source": [
-    "%%capture\n",
-    "# model = transformers.AutoModel.from_pretrained('bert-base-cased', cache_dir = './input/model/')\n",
+    "# model = transformers.AutoModel.from_pretrained('bert-base-cased', cache_dir = './input/toxic-bert/model/')\n",
     "# model = transformers.AutoModel.from_pretrained('bert-base-cased')\n",
     "model = LitBert()"
    ]
@@ -191,7 +219,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "542006ae5dad41f2a08d542b9a69c040",
+       "model_id": "64e17fb3e8864d8e9bb8aa0ecefe1ea1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -242,16 +270,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "id": "fc72da17-3d25-41b5-9890-a0cebf8f8cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Free Memory before submission\n",
+    "torch.cuda.empty_cache()\n",
+    "_ = gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "1348800b-3bf3-4d53-a2ac-aa0c875e1bc5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "to_scoreList = to_score['text'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b38fb77b-05d6-4c4d-9015-0a0926fd0ec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ValToxicData(Dataset):\n",
+    "    def __init__(self, path, tokenizer):\n",
+    "        super(ValToxicData, self).__init__()\n",
+    "        \n",
+    "        self.dataframe = pd.read_csv(path)\n",
+    "        self.tokenizer = tokenizer\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.dataframe)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        \n",
+    "        text = self.dataframe.iloc[idx]['text']\n",
+    "        \n",
+    "        text = tokenizer.encode_plus(text, add_special_tokens=True, padding = 'max_length', max_length=128, truncation=True, return_tensors='pt')\n",
+    "        \n",
+    "        tokens =  text['input_ids'].squeeze(0)\n",
+    "        attn_mask = text['attention_mask'].squeeze(0)\n",
+    "\n",
+    "        return {'tokens': tokens, 'attn_mask': attn_mask}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "66f3f228-8599-496b-9de1-cdf589f1081e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predDataset = ValToxicData('./data/comments_to_score.csv', tokenizer)\n",
+    "val_dataloader = DataLoader(predDataset, batch_size = 64, shuffle = False, num_workers = 0, pin_memory = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e6843c36-867f-4625-a326-74eb64fa377c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def val_step(dataloader):\n",
+    "\n",
+    "    \n",
+    "    preds = []\n",
+    "    \n",
+    "    for idx, batch in enumerate(dataloader):    \n",
+    "        \n",
+    "        tokens = batch['tokens'].to(device)\n",
+    "        attn_mask = batch['attn_mask'].to(device)\n",
+    "        \n",
+    "        toxic_score = model.to(device).forward(tokens, attn_mask)\n",
+    "        preds.append(toxic_score)\n",
+    "    \n",
+    "    preds = torch.cat(preds)\n",
+    "    preds = preds.reshape(-1)\n",
+    "    \n",
+    "    return preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b2cb266a-46b3-461c-b90f-40f7e2b0ab25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = val_step(val_dataloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ff6137d6-eafe-49c4-9013-532118c97ebc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache()\n",
+    "_ = gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "48c53238-ce00-4b36-8f05-1fec471541d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_df = pd.DataFrame(predDataset.dataframe['comment_id'])\n",
+    "submission_df['score'] = preds.cpu().numpy()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b49519-09f1-47c3-8a5c-54601faf0176",
+   "id": "03117985-7301-4908-8dae-50cdf1b99f6f",
    "metadata": {},
    "outputs": [],
    "source": []
